--- a/public/css/style.css
+++ b/public/css/style.css
@@ -49,15 +49,6 @@ div.layout > div.content {
   margin-left: 250px;
 }
 
-.section h2.sub-title {
-  margin: 16px 16px 8px 16px;
-  padding-left: 12px;
-  border-left: 6px solid #ccc;
-  font-size: 20px;
-}
-.section p.text {
-  margin: 12px 18px;
-}
 /* #endregion */
 
 /* #region header */
@@ -345,6 +336,21 @@ div.error p.fallback a {
 /* #endregion */
 
 /* #region doc */
+div.document h1.title {
+  margin: 0;
+  padding: 6px 12px;
+  border-bottom: 1px solid #eaeaea;
+  font-size: 20px;
+}
+div.document h2.sub-title {
+  margin: 16px 16px 8px 16px;
+  padding-left: 12px;
+  border-left: 6px solid #ccc;
+  font-size: 20px;
+}
+div.document p.text {
+  margin: 12px 18px;
+}
 ol.items {
   padding-right: 12px;
 }
