--- a/public/css/style.css
+++ b/public/css/style.css
@@ -158,6 +158,7 @@ button#avatar-button img {
   height: 32px;
   border-radius: 100%;
 }
+
 div.nav-dialog {
   display: none;
   position: absolute;
@@ -209,6 +210,9 @@ span.exist-unconfirm i {
   color: #db3333;
 }
 
+span.indent {
+  margin-left: 4px;
+}
 /* #endregion */
 
 /* #region footer */
@@ -264,6 +268,35 @@ div.copyright p {
     border-bottom: 1px solid #eaeaea;
   }
   
+  div.nav-dialog {
+    right: -2px;
+    width: 100%;
+    box-sizing: border-box;
+  }
+  ul.dialog-group {
+    display: flex;
+  }
+  li.dialog-item {
+    width: 33.3333%;
+    border-right: 1px solid #eaeaea;
+  }
+  li.dialog-item a {
+    min-width: auto;
+    margin: 0 4px;
+    padding: 18px 2px;
+    line-height: 22px;
+    box-sizing: border-box;
+    font-size: 13px;
+    text-align: center;
+  }
+  span.indent {
+    margin-left: 0;
+  }
+  span.indent::before {
+    white-space: pre;
+    content: "\A";
+  }
+
   div.introduct:nth-child(n + 2) {
     margin-top: 0 !important;
   }
