--- a/public/css/template.css
+++ b/public/css/template.css
@@ -354,6 +354,19 @@ button.button-danger:hover {
 button.button-danger-disabled {
 	background: var(--danger-disabled-color) !important;
 }
+button.extend-link {
+  position: relative;
+  z-index: 1;
+}
+button.extend-link a {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  text-indent:-999px;
+  z-index: 2;
+}
 /* #endregion */
 /* #region ui.text */
 input.text {
