--- a/public/css/style.css
+++ b/public/css/style.css
@@ -560,8 +560,16 @@ div.event-buttons {
 /* #endregion */
 
 /* #region statuses */
-div.status p.like {
+div.status div.actions {
   float: right;
+}
+div.actions button {
+  display: inline;
+  margin: 0;
+  padding: 1px 4px;
+  border: none;
+  background: transparent;
+  outline: none;
   cursor: pointer;
   -moz-user-select: none;
   -ms-user-select: none;
@@ -569,13 +577,13 @@ div.status p.like {
   -webkit-user-select: none;
   -webkit-touch-callout: none;
 }
-div.status p.like span.unlike:hover {
+div.actions button.like span.unlike:hover {
   color: #db3333;
 }
-div.status p.like span.liked {
+div.actions button.like span.liked {
   color: #db3333;
 }
-div.status p.like span.liked:hover {
+div.actions p.like span.liked:hover {
   color: #c32222;
 }
 /* #endregion */
