--- a/public/css/style.css
+++ b/public/css/style.css
@@ -163,10 +163,10 @@ div.nav-dialog {
   display: none;
   position: absolute;
   top: 54px;
-	right: 2px;
+	right: 0;
   z-index: 1;
   border: 1px solid #eee;
-  box-shadow: 1px 1px 1px 1px #eee;
+  box-shadow: 0 0 1px 0 #eee;
   background: #fff;
 }
 ul.dialog-group {
