--- a/public/css/style.css
+++ b/public/css/style.css
@@ -160,50 +160,11 @@ button#avatar-button img {
 }
 
 div.nav-dialog {
-  display: none;
-  position: absolute;
   top: 54px;
 	right: 0;
-  z-index: 1;
-  border: 1px solid #eee;
-  box-shadow: 0 0 1px 0 #eee;
-  background: #fff;
 }
-ul.dialog-group {
-  list-style: none;
-  margin: 0;
-  padding: 4px 0;
-}
-ul.dialog-group:nth-child(n + 2) {
-	border-top: 1px solid #eee;
-}
-li.dialog-item a {
-  display: block;
+div.nav-dialog li.dialog-item a {
   min-width: 140px;
-  padding: 10px 16px;
-  color: #666;
-  font-size: 12px;
-  text-decoration: none;
-  transition: background-color 0.1s;
-	-moz-transition: background-color 0.1s;
-	-webkit-transition: background-color 0.1s;
-	-o-transition: background-color 0.1s;
-	-ms-transition: background-color 0.1s;
-}
-li.dialog-item a:hover {
-	background: #fafafa;
-}
-li.success-dialog-item a:hover {
-	background: #def2de;
-	color: #42a942;
-}
-li.inverse-dialog-item a:hover {
-	background: #dedef2;
-	color: #4242a9;
-}
-li.danger-dialog-item a:hover {
-	background: #f2dede;
-	color: #a94442;
 }
 
 span.exist-unconfirm i {
