--- a/public/css/style.css
+++ b/public/css/style.css
@@ -333,29 +333,23 @@ div.error p.fallback a {
 /* #endregion */
 
 /* #region doc */
-div.document h1.title {
-  margin: 0;
-  padding: 6px 12px;
-  border-bottom: 1px solid #eaeaea;
-  font-size: 20px;
-}
 div.document h2.sub-title {
-  margin: 16px 16px 8px 16px;
+  margin: 12px 10px 8px 10px;
   padding-left: 12px;
   border-left: 6px solid #ccc;
-  font-size: 20px;
+  font-size: 16px;
 }
 div.document p.text {
   margin: 12px 18px;
 }
-ol.items {
-  padding-right: 12px;
+div.document ol.items {
+  padding-left: 32px;
 }
-ol.items li {
+div.document ol.items li {
   margin: 12px 0;
 }
-p.thats-all {
-  margin: 24px 18px;
+div.document p.thats-all {
+  margin: 24px 18px 12px 0;
   text-align: right;
 }
 /* #endregion */
